--- a/stellar-core/debian/control
+++ b/stellar-core/debian/control
@@ -1,21 +1,21 @@
-Source: stellar-core
+Source: stellar-core-onfo
 Section: web
 Priority: optional
-Maintainer: Package Maintainer <packages@stellar.org>
+Maintainer: Ivan Voras (ONFO) <ivan.voras@toptal.com>
 Build-Depends: debhelper (>=9), autoconf (>=2.69), automake (>=1.15), binutils (>=2.26), bison (>=3.0.4), build-essential (>=12.1), clang-5.0 (>=5.0), libc++-dev, libc++abi-dev, devscripts (>=2.16.2), dh-autoreconf (>=11), dh-systemd (>=1.5), flex (>=2.6.0), git (>=2.7.4), libpq-dev (>=9.5.2), libtool (>=2.4.6), pandoc (>=1.16.0.2~dfsg-1), pkg-config (>=0.29.1), libsqlite3-0 (>=3.11.0), postgresql-common
 Standards-Version: 3.9.6
 Homepage: https://www.stellar.org
 
-Package: stellar-core
+Package: stellar-core-onfo
 Architecture: any
-Depends: libc++1, libc++abi1, libpq5, libsqlite3-0 (>=3.11.0), stellar-core-utils
-Recommends: stellar-core-utils
+Depends: libc++1, libc++abi1, libpq5, libsqlite3-0 (>=3.11.0)
+Recommends: stellar-core-onfo-utils
 Description: Stellar  is  a  decentralized, federated peer-to-peer network
  Stellar  is  a  decentralized, federated peer-to-peer network that allows people to send payments in any asset anywhere in the world instantaneously, and with minimal fee.
  Stellar-core is the core component of this network. Stellar-core is a C++ implementation of the Stellar Consensus Protocol configured to construct a chain of ledgers that are guaranteed to be in agreement across all the participating nodes at all times.
 
-Package: stellar-core-dbg
+Package: stellar-core-onfo-dbg
 Section: debug
 Architecture: any
-Depends: stellar-core (= ${Source-Version})
+Depends: stellar-core-onfo
 Description: Debug symbols for stellar-core
