--- a/stellar-horizon-postgres/debian/control
+++ b/stellar-horizon-postgres/debian/control
@@ -1,15 +1,15 @@
-Source: stellar-horizon-postgres
+Source: stellar-core-onfo-postgres
 Section: web
 Priority: optional
-Maintainer: Package Maintainer <packages@stellar.org>
+Maintainer: Ivan Voras (ONFO) <ivan.voras@toptal.com>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.6
 Homepage: https://www.stellar.org/
 
-Package: stellar-horizon-postgres
+Package: stellar-core-onfo-postgres
 Architecture: any
-Depends: stellar-horizon, postgresql-9.5 (>=9.5.2) | postgresql-10
-Description: This package will configure PostgreSQL for stellar-horizon locally.
+Depends: stellar-core, postgresql-9.5 (>=9.5.2) | postgresql-10
+Description: This package will configure PostgreSQL for stellar-core locally.
  * creates/manages stellar user
  * creates stellar PostgreSQL role
- * creates horizon database
+ * creates stellar database
